fix: overflow fix

--- a/apps/client/app/(tabs)/dashboard/styles.module.css
+++ b/apps/client/app/(tabs)/dashboard/styles.module.css
@@ -1,13 +1,13 @@
 .main {
+  display: flex;
   flex-direction: column;
   height: 100vh;
   overflow: scroll;
   background-color: light-dark(var(--mantine-color-body), var(--mantine-color-coco-1));
 }
 
-.nav {
-  position: sticky;
-  overflow-x: auto;
-  height: 100vh;
-  min-width: 80%;
+.container {
+  height: 100%;
+  width: 100%;
+  overflow: scroll;
 }
